i think i fixed the z-index issues with the modal and overlapping pictures and  the comment send button. need to test on mobile after push.

--- a/resources/sass/pages/_all-posts.scss
+++ b/resources/sass/pages/_all-posts.scss
@@ -41,7 +41,7 @@
         margin-bottom: 3rem;
         border: $border-thickness solid $border-color;
         font-family: $main-font;
-        z-index: 3;
+        // z-index: 3;
         border-radius: $border-r;
         // background: $post-bg;
         background: $post-bg-gradient;
@@ -140,6 +140,7 @@
           display: flex;
           align-items: center;
           justify-content: center;
+          z-index: 15;
 
           .modal {
             padding: 50px;
@@ -359,9 +360,9 @@
               padding: .5rem .2rem;
               position: relative;
 
-              &:nth-of-type(2n){
-                // background: $comment-bg;
-              }
+              // &:nth-of-type(2n){
+              //   // background: $comment-bg;
+              // }
 
               &:not(:last-of-type) {
                 border-bottom: $border-thickness solid $border-color;
@@ -444,7 +445,7 @@
             position: absolute;
             top: -2.5rem;
             right: 5px;
-            z-index: 10000;
+            z-index: 10;
             border-radius: $border-r;
 
             i {
